# jpeg-compression

./: CMakeLists.txt  README.md
include/: transform.hpp  types.hpp  utility.hpp
src/: transform.cpp
